alb.tf
resource "aws_lb" "alb" {
  name = "terraform-alb"
  internal = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.alb_sg.id]
  subnets = aws_subnet.public[*].id
}
resource "aws_lb_target_group" "tg" {
  name = "terraform-tg"
  port = 80
  protocol = "HTTP"
  vpc_id = aws_vpc.main.id
}
resource "aws_lb_target_group_attachment" "attach" {
  count = 2
  target_group_arn = aws_lb_target_group.tg.arn
  target_id = aws_instance.web[count.index].id
  port = 80
}
resource "aws_lb_listener" "listener" {
  load_balancer_arn = aws_lb.alb.arn
  port = 80
  protocol = "HTTP"

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.tg.arn
  }
}
